fix(modal): apply vertical spacing of content when no header or footer

--- a/packages/components/base/src/modal/styles/index.module.scss
+++ b/packages/components/base/src/modal/styles/index.module.scss
@@ -74,6 +74,14 @@ $padding: scss-utils.get-css-var(modal, spacing);
 
 .content {
   padding: 0 $padding;
+
+  &_no_header {
+    padding-top: $padding;
+  }
+
+  &_no_footer {
+    padding-bottom: $padding;
+  }
 }
 
 .header,
